--- a/config/locales/devise.ua.yml
+++ b/config/locales/devise.ua.yml
@@ -4,4 +4,4 @@ ua:
     messages:
       not_saved:
         one: "Через одну помилку користувач не може бути збережений:"
-        other: "Через %{count} помилок користувач не може бути збережений:"
+        other: "Через помилки користувач не може бути збережений:"
