--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -34,7 +34,9 @@ ua:
       tiding:
         title: "Заголовок"
         text: "Текст"
-
+      comment:
+        name: "Заголовок"
+        text: "Текст"
     errors:
       models:
         user:
@@ -71,6 +73,12 @@ ua:
               taken: "вже існує"
             text:
               blank: "не може бути пустим"
+        comment:
+          attributes:
+            name:
+              blank: "не може бути пустим"
+            text:
+              blank: "не може бути пустим"
 
   views:
     pagination:
@@ -85,7 +93,7 @@ ua:
       new:
         h_registration: "Реєстрація"
         min_password_length: "мінімум 8 символів"
-        choose_avatar: "Виберіть аватар"
+        choose_avatar: "Виберіть фото"
         buttons:
           student: "Учень"
           teacher: "Вчитель"
@@ -123,6 +131,8 @@ ua:
         register: "Зареєструватися"
         language: "Змінити мову"
         new_test: "Новий тест"
+        wath_comments: "Розглянути пропозиції"
+        comments: "Пропозиції"
         add_news: "Додати новину"
         manage_students: "Редагувати учнів"
         index: "Вчителі"
@@ -136,6 +146,17 @@ ua:
       name: "Прізвище Ім'я Побатькові"
       email: "Емейл"
       photo: "Фото"
+  comments:
+    form:
+      buttons:
+        submit: "Додати пропозицію"
+    new:
+      h_add_suggestions: "Створення пропозицій"
+      buttons:
+        back: "Назад"
+    create:
+      controllers:
+        sucessful: "Ваша пропозиція успішно створена і буде розглянута найближчим часом."
   teachers:
     test_settings:
       form:
@@ -190,6 +211,16 @@ ua:
         buttons:
           submit: "Зберегти"
           back: "Назад"
+    comments:
+      comments:
+        guest: "Гість"
+      index:
+        h_suggestions_list: "Список пропозицій"
+        buttons:
+          back: "Назад"
+      destroy:
+        controllers:
+          error: "Ви не можете видалити цю пропозицію."
     tidings:
       new:
         h_news_creation: "Створення новини"
