--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -4,11 +4,12 @@ ua:
       blank_question: "не може бути пустим"
       blank_answer: "не може бути пустою"
       not_saved:
-        one: "Через одну помилку %{resource} неможливо зберегти:"
-        other: "Через помилки %{resource} неможливо зберегти:"
+        one: "Через одну помилку неможливо зберегти %{resource}:"
+        other: "Через помилки неможливо зберегти %{resource}:"
   activerecord:
     models:
-      user:
+      user: користувача 
+      users: користувачів
       test_setting: тест
       test_settings: тести
       question: питання
@@ -116,6 +117,7 @@ ua:
         language: "Змінити мову"
         new_test: "Новий тест"
         add_news: "Додати новину"
+        manage_students: "Редагувати учнів"
   teachers:
     test_settings:
       form:
@@ -155,3 +157,26 @@ ua:
       show:
         buttons:
           back: "Назад"
+    students:
+      index:
+        h_students: "Учні"
+        name: "Прізвище Ім'я Побатькові"
+        email: "Емейл"
+        photo: "Фото"
+        buttons:
+          back: "Назад"
+      students:
+        name: "Прізвище Ім'я Побатькові"
+        email: "Емейл"
+        class: "Клас"
+        edit: "Редагувати"
+        destroy: "Видалити"
+        destroy_certain: "Ви впевнені, що хочете видалити даного учня?"
+      edit:
+        h_edit: "Редагування учня"
+        buttons:
+          submit: "Зберегти"
+          back: "Назад"
+      destroy:
+        controllers:
+          error: "Ви не можете видалити цього учня."
