--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -80,12 +80,6 @@ ua:
             text:
               blank: "не може бути пустим"
 
-  # controllers:
-  #   teachers:
-  #     test_settings:
-  #       create:
-  #         successfull: "Ви успішо створили тест"
-
   views:
     pagination:
       first: "<<"
@@ -402,6 +396,7 @@ ua:
         h_testing: "Тестування"
         test_name: "Тест на тему: "
         you_have_time: "Залишилось часу:"
+        attention: "Увага! Ви можете дати лише одну відповідь на запитання. Якщо Ви дасте більше одної відповіді на одне запитання, то всі відповіді на дане запитання автоматично буть вважатися неправильними."
         buttons:
           back: "Назад"
       form:
@@ -413,5 +408,9 @@ ua:
         you_pass_test: "Назва тесту: "
         testing_max_tried_count: "Загальна кількість спроб: "
         you_have_attempting: "У вас залишилось спроб: "
+        result: "Результат: "
         buttons:
           page_for_choose_tests: "Усі тести"
+      create:
+        controllers:
+          successfull: "Ви пройшли тест"
