--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -87,6 +87,11 @@ ua:
       previous: "Попередня"
       next: "Наступна"
 
+  js:
+    welcome:
+      index:
+        you_really_want: "Якщо ви закриєте або перезагрузите сторінку, то здача тесту завершиться і будуть враховані лише ті питання на які ви дали відповідь"
+
   # views:
   devise:
     registrations:
@@ -123,21 +128,17 @@ ua:
   shared:
     user_menu:
       buttons:
-        main: "Головна"
-        testing: "Тестування"
+        testing: "Список тестів"
         edit_profile: "Редагувати профіль"
         sign_out: "Вийти"
         log_in: "Логін"
         register: "Зареєструватися"
         language: "Змінити мову"
         new_test: "Новий тест"
-        wath_comments: "Розглянути пропозиції"
-        comments: "Пропозиції"
-        add_news: "Додати новину"
+        comments: "Додати пропозицію"
         pass_test: "Пройти тест"
-        manage_students: "Редагувати учнів"
         index: "Вчителі"
-        edit: "Редагувати вчителів"
+        admin_main_page: "Адмінка"
   users:
     index:
       h_teachers: "Наші вчителі"
@@ -235,6 +236,13 @@ ua:
       show:
         buttons:
           back: "Назад"
+      index:
+        buttons:
+          main: "Головна"
+          wath_comments: "Розглянути пропозиції"
+          add_news: "Додати новину"
+          manage_students: "Редагувати учнів"
+          edit: "Редагувати вчителів"
     students:
       index:
         h_students: "Учні"
@@ -274,7 +282,6 @@ ua:
           back: "Назад"
           choose_subject: "Виберіть предмет"
       test_settings:
-
         buttons:
           show_test: " - пройти тест"
       show:
@@ -284,8 +291,10 @@ ua:
         h_files: "Файли"
         h_videos: "Відео"
         testing_time_to_pass: "Час проходження: "
-        testing_max_tried_count: "Кількість спроб: "
+        testing_max_tried_count: "Загальна кількість спроб: "
+        you_have_attempting: "У вас залишилось спроб: "
         seconds: "секунд"
+        the_end: "Ви не можете пройти даний тест тому, що використали усі спроби"
         buttons:
           back: "Назад"
           pass_test: "Пройти тест"
@@ -295,3 +304,13 @@ ua:
         h_testing: "Тестування"
         buttons:
           back: "Назад"
+    tests:
+      new:
+        h_testing: "Тестування"
+        test_name: "Тест на тему: "
+        you_have_time: "Залишилось часу:"
+        buttons:
+          back: "Назад"
+      form:
+        buttons:
+          save: "Зберегти тест"
